  only album tracks, use the new "singleton:" query term: the query
  "singleton:true" matches only singleton tracks; "singleton:false"
  matches only album tracks. The lastid plugin has been extended to
  support matching individual items as well.
* The importer/autotagger system has been heavily refactored in this
  release. If anything breaks as a result, please let me know.
* Support for album art embedded in files. The "embedcoverart" plugin
  provides this functionality. (Thanks, daenney!)
* The "distance" number, which quantifies how different an album's
  current and proposed metadata are, is now displayed as "similarity"
  instead. This should be less noisy and confusing; you'll now see
  99.5% instead of 0.00489323.
* A new "timid mode" in the importer asks the user every time, even
  when it makes a match with very high confidence. The "-t" flag on
  the command line and the "import_timid" config option control this
  mode.
* The multithreaded importer should now abort (either by selecting
  aBort or by typing ^C) much more quickly. Previously, it would try
  to get a lot of work done before quitting; now it gives up as soon
  as it can.
* Added a new plugin event, "album_imported", which is called every
  time an album is added to the library. (Thanks, Lugoues!)
* A new plugin method, register_listener, is an imperative alternative
  to the @listen decorator (Thanks again, Lugoues!)
* In path formats, $albumartist now falls back to $artist (as well as
  the other way around).
* The importer now prints "(unknown album)" when no tags are present.
* When autotagging, "and" is considered equal to "&".
* Fix some crashes when deleting files that don't exist.
* Fix adding individual tracks in BPD.
* Fix crash when ~/.beetsconfig does not exist.

1.0b7
-----
* "Various artists" releases are handled much more gracefully. The
  autotagger now sets the "comp" flag on albums whenever the album is
  identified as a "various artists" release by MusicBrainz. Also,