@@ -13,8 +13,12 @@
   support matching individual items as well.
 * The importer/autotagger system has been heavily refactored in this
   release. If anything breaks as a result, please let me know.
-* Support for album art embedded in files. The "embedcoverart" plugin
-  provides this functionality. (Thanks, daenney!)
+* Support for album art embedded in files. A new plugin, called
+  "embedart", implements this functionality. Enable the plugin to
+  automatically embed downloaded album art into your music files'
+  metadata. The plugin also provides the "embedart" and "extractart"
+  commands for moving image files in and out of metadata. See the
+  wiki for more details. (Thanks, daenney!)
 * The "distance" number, which quantifies how different an album's
   current and proposed metadata are, is now displayed as "similarity"
   instead. This should be less noisy and confusing; you'll now see
